manifests/user/default/archive-warrior.yml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: archive-warrior
  namespace: default
  labels:
    app: archive-warrior
spec:
  replicas: 2
  selector:
    matchLabels:
      app: archive-warrior
  template:
    metadata:
      labels:
        app: archive-warrior
    spec:
      containers:
      - name: app
        image: archiveteam/warrior-dockerfile
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
