manifests/user/default/znc.yml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: znc
  namespace: default
  labels:
    app: znc
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: znc
  template:
    metadata:
      labels:
        app: znc
    spec:
      containers:
        - name: app
          image: znc:1.7-slim
          ports:
            - containerPort: 6697
              hostPort: 6697
          volumeMounts:
            - name: znc-config
              mountPath: /znc-data
          livenessProbe:
            tcpSocket:
              port: 6697
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              cpu: 50m
              memory: 32Mi
            requests:
              cpu: 20m
              memory: 4Mi
      volumes:
        - name: znc-config
          persistentVolumeClaim:
            claimName: znc-config-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: znc-svc
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 6697
    - name: irc
      port: 6697
      targetPort: 6697
  selector:
    app: znc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: znc-ingress
  namespace: default
spec:
  rules:
    - host: znc.underyx.me
      http:
        paths:
          - backend:
              serviceName: znc-svc
              servicePort: 80
            path: /
  tls:
    - hosts:
        - znc.underyx.me
      secretName: znc-tls
